--- a/styles.css
+++ b/styles.css
@@ -258,9 +258,11 @@ footer img {
 
 /* desktop */
 @media(min-width:1200px) {
-    nav>img {
+    nav{
+        position: relative;
         opacity: 0;
     }
+   
     nav>ul {
         margin-top: 2em;
         margin-right: 2em;
@@ -437,6 +439,10 @@ footer img {
 
 
 @media (max-width:1199px) {
+    body{
+        position: relative;
+        z-index: -10;
+    }
     nav{
         display: flex;
         justify-content: end;
