--- a/styles.css
+++ b/styles.css
@@ -258,10 +258,7 @@ footer img {
 
 /* desktop */
 @media(min-width:1200px) {
-    nav{
-        position: relative;
-        opacity: 0;
-    }
+    
    
     nav>ul {
         margin-top: 2em;
@@ -290,7 +287,9 @@ footer img {
         text-decoration: none;
         color: var(--hard-black);
     }
-
+.icon__lines{
+    opacity: 0;
+}
 
     .header {
         display: flex;
