--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ body {
     font-family: 'Inter', sans-serif;
     display: grid;
     justify-content: center;
-
+    overflow-x:hidden;
     width: 100vw;
 }
 
